--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "24.X"
   },
   "dependencies": {
     "firebase-admin": "^11.11.0",
